version 0.16, Second attempt to fix font errors in dark mode, tested on Android Chrome

--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -18,4 +18,15 @@
   }
   .textfont1{
     --color: black;
+    --background:white;
+    background:white;
+    
   }
+  .textback1{
+    --background:white;
+    background:white;
+  }
+  .titlefont1{
+    --color: grey;
+    
+}
